--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1162,35 +1162,78 @@
         "\n",
         "| Layer  | Output Dimension  | Number of Parameters (Weights) |\n",
         "|---|---|---|\n",
-        "| INPUT  |  224x224x3 | 0  |\n",
-        "|  CONV3-64 | -  | -  | \n",
-        "| ReLU |  - | -  |\n",
-        "| POOL2|  - | -  |\n",
-        "|CONV3-128 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "| POOL2|  - | -  |\n",
-        "|CONV3-256 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "|CONV3-256 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "| POOL2|  - | -  |\n",
-        "|CONV3-512 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "|CONV3-512 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "| POOL2|  - | -  |\n",
-        "|CONV3-512 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "|CONV3-512 | - | -|\n",
-        "|ReLU | - | -|\n",
-        "| POOL2|  - | -  |\n",
-        "| FC-4096|  - | -  |\n",
-        "| FC-4096|  - | -  |\n",
-        "| FC-1000|  - | -  |\n",
-        "| SOFTMAX|  - | -  |\n",
+        "| INPUT     |  224x224x3   | 0                           |\n",
+        "|  CONV3-64 | 224x224x64   | 3x3x3x64+64=1792            |  \n",
+        "| ReLU      |  224x224x64  | 0                           |\n",
+        "| POOL2     |  112x112x64  | 0                           |\n",
+        "|CONV3-128  | 112x112x128  | 3x3x64x128+128=73856        |\n",
+        "|ReLU       | 112x112x128  | 0                           |\n",
+        "| POOL2     |  56x56x128   | 0                           |\n",
+        "|CONV3-256  | 56x56x256    | 3x3x128x256+256 = 295168    |\n",
+        "|ReLU       | 56x56x256    | 0                           |\n",
+        "|CONV3-256  | 56x56x256    | 3x3x256x256+256 = 590080    |\n",
+        "|ReLU       | 56x56x256    | 0                           |\n",
+        "| POOL2     |  28x28x256   | 0                           |\n",
+        "|CONV3-512  | 28x28x512    | 3x3x256x512+512 = 1180160   |\n",
+        "|ReLU       | 28x28x512    | 0                           |\n",
+        "|CONV3-512  | 28x28x512    | 3x3x512x512+512 = 2359808   |\n",
+        "|ReLU       | 28x28x512    | 0                           |\n",
+        "| POOL2     |  14x14x512   | 0                           |\n",
+        "|CONV3-512  | 14x14x512    | 3x3x512x512+512 = 2359808   |\n",
+        "|ReLU       | 14x14x512    | 0                           |\n",
+        "|CONV3-512  | 14x14x512    | 3x3x512x512+512 = 2359808   |\n",
+        "|ReLU       | 14x14x512    | 0                           |\n",
+        "| POOL2     |  7x7x512     | 3x3x512x512+512 = 2359808   |\n",
+        "| FC-4096   |  1x4096      | 7x7x512x4096+4096 = 102764544  |\n",
+        "| FC-4096   |  1x4096      | 4096x4096+4096 = 16781312   |\n",
+        "| FC-1000   |  1x1000      | 4096x1000+1000 = 4097000    |\n",
+        "| SOFTMAX   |  1x10        | 1000x10+10 = 10010          |\n",
         "\n",
         "2. What is the total number of parameters? (use a calculator for this one)\n",
         "3. What percentage of the weights are found in the fully-connected layers?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QgVF5DcNkXfn"
+      },
+      "source": [
+        "## <img src=\"https://img.icons8.com/clouds/100/26e07f/about.png\" style=\"height:50px;display:inline\">Question 6 - <span style=\"color: HotPink\">Solution</span>\n",
+        "---\n",
+        "\n",
+        "2. The total number of parameters is 132873346.\n",
+        "\n",
+        "3. The percentage of weights fuond in all fc layers from the total amount is $93.06$%."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oFGL2ExzjXo5",
+        "outputId": "4316bc04-40d1-4840-ff91-824066b8bf6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "total_num_weights = 1792 + 73856 + 295168 + 590080 + 1180160 + 2359808 + 2359808 + 2359808 + 102764544 + 16781312 + 4097000 + 10010\n",
+        "print('total number of parameters: ',total_num_weights)\n",
+        "fc_num_weights = 102764544 + 16781312 + 4097000 + 10010\n",
+        "print('total number of parameters in fc layers: ',fc_num_weights)\n",
+        "print('percentage of fc parameters from total: ',fc_num_weights / total_num_weights * 100, '%')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total number of parameters:  132873346\n",
+            "total number of parameters in fc layers:  123652866\n",
+            "percentage of fc parameters from total:  93.06070007449048 %\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1250,7 +1293,7 @@
         "np.random.seed(seed)\n",
         "torch.manual_seed(seed)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1325,7 +1368,7 @@
         "      print('At layer num {}, mean(x) = {}, std(x) = {}'.format(i, x.mean(), x.std()))\n",
         "print(x.mean(), x.std())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1493,7 @@
         "print('The average std of y is: {}'.format(np.mean(y_std)))\n",
         "    \n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,7 +1551,7 @@
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1647,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,7 +1785,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1835,7 +1878,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
