--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1130,6 +1130,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pofTgorjl6ZL"
+      },
+      "source": [
+        "## <img src=\"https://img.icons8.com/clouds/100/26e07f/about.png\" style=\"height:50px;display:inline\">Question 4 - <span style=\"color: HotPink\">Solution</span>\n",
+        "---\n",
+        "We calculate\n",
+        "\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  \\mathbb{E}_{z\\sim \\mathcal{N}(0, 1)}\\left[\\varphi^2(z)\\right] &= \\int_{-\\infty}^{\\infty}\\max\\lbrace 0, z\\rbrace^2 \\frac{1}{\\sqrt{2\\pi}}\\exp{\\left(-\\frac{z^2}{2}\\right)}dz\\\\\n",
+        "  &= \\int_{0}^{\\infty}z^2 \\frac{1}{\\sqrt{2\\pi}}\\exp{\\left(-\\frac{z^2}{2}\\right)}dz\\\\\n",
+        "  &= \\frac{1}{2}\\int_{-\\infty}^{\\infty}z^2 \\frac{1}{\\sqrt{2\\pi}}\\exp{\\left(-\\frac{z^2}{2}\\right)}dz\\\\\n",
+        "  &= \\frac{1}{2}\\mathbb{E}_{z\\sim \\mathcal{N}(0, 1)}\\left[z^2\\right]\\\\\n",
+        "  &= \\frac{1}{2}\\left(\\text{Var}_{z\\sim \\mathcal{N}(0, 1)}(z)-\\mathbb{E}_{z\\sim \\mathcal{N}(0, 1)}\\left[z\\right]^2\\right)\\\\\n",
+        "  &= \\frac{1}{2}\\left(1-0\\right)\\\\\n",
+        "  &= \\frac{1}{2}\n",
+        "\\end{align}\n",
+        "$$\n",
+        "\n",
+        "placing this result back into the $\\sigma_l$ relation above we get\n",
+        "\n",
+        "$$ \\sigma_l = \\sqrt{\\frac{2}{d_{l-1}}}$$\n",
+        "\n",
+        "and we are done."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "PKNdQv8RJ4Pj"
       },
       "source": [
@@ -1210,11 +1239,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oFGL2ExzjXo5",
-        "outputId": "4316bc04-40d1-4840-ff91-824066b8bf6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oFGL2ExzjXo5",
+        "outputId": "4316bc04-40d1-4840-ff91-824066b8bf6b"
       },
       "source": [
         "total_num_weights = 1792 + 73856 + 295168 + 590080 + 1180160 + 2359808 + 2359808 + 2359808 + 102764544 + 16781312 + 4097000 + 10010\n",
