Q1 in the process

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -180,60 +180,75 @@
       "source": [
         "## <img src=\"https://img.icons8.com/clouds/100/26e07f/about.png\" style=\"height:50px;display:inline\">Question 1 - <span style=\"color: HotPink\">Solution</span>\n",
         "---\n",
-        "Let us start by calculating $\\overline{\\mathcal{R}}(w_\\mu)$ from $\\mathcal{R}(w_\\mu)$. First we simplify $\\mathcal{R}(w_\\mu)$\n",
+        "Let us start by calculating $\\overline{\\mathcal{R}}(w_\\mu)$ from $\\mathcal{R}(w_\\mu)$. First lets simplify $\\mathcal{R}(w_\\mu)$\n",
         "\n",
-        "$$\n",
+        "\n",
         "\\begin{align}\n",
         "    \\mathcal{R}(w_{\\mu}) &= ||(H_{\\mu}^{-1}H-I)w_{true} + H_{\\mu}^{-1}X^T\\epsilon||^2\\\\\n",
         "                         &= \\left((H_{\\mu}^{-1}H-I)w_{true} + H_{\\mu}^{-1}X^T\\epsilon\\right)\\left((H_{\\mu}^{-1}H-I)w_{true} + H_{\\mu}^{-1}X^T\\epsilon\\right)^T\n",
         "\\end{align}\n",
-        "$$\n",
         "\n",
         "\n",
+        "before moving forward with the computation it would be easier do define new variables\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "%%%%%%%%%%%%%%%%%%\n",
-        "<!-- $$\n",
         "\\begin{align}\n",
-        "\\int_0^1 \\nabla f(y + t(x-y))^T(x-y) dt &= \\frac{f(y + t(x-y))}{(x-y)}(x-y)|_0^1\\\\\n",
-        "                                        &= f(y + t(x-y))|_0^1\\\\\n",
-        "                                        &= f(y + 1(x-y)) - f(y + 0(x-y))\\\\\n",
-        "                                        &= f(x) - f(y)\\\\\n",
+        "  a &\\triangleq (H_{\\mu}^{-1}H-I)w_{true},\\quad b \\triangleq H_{\\mu}^{-1}X^T\\epsilon\n",
         "\\end{align}\n",
-        "$$\n",
         "\n",
-        "So \n",
-        "$$\n",
+        "We can simplify the relation above\n",
+        "\n",
         "\\begin{align}\n",
-        "    \\vert f(w_1) -f(w_2) -\\nabla f(w_2)^T (w_1-w_2)\\vert &= \\vert\\int_0^1 \\nabla f(w_2 + t(w_1-w_2))^T(w_1-w_2) dt -\\nabla f(w_2)^T (w_1-w_2)\\vert\\\\\n",
-        "                                              &= \\vert\\int_0^1 \\nabla f(w_2 + t(w_1-w_2))^T(w_1-w_2) dt -\\int_0^1\\nabla f(w_2)^T (w_1-w_2)dt\\vert\\\\\n",
-        "                                              &= \\vert\\int_0^1 \\left(\\nabla f(w_2 + t(w_1-w_2))^T(w_1-w_2)  -\\nabla f(w_2)^T (w_1-w_2)\\right)dt\\vert\\\\\n",
-        "                  \\color{#FE6F5E}{\\text{(I)}} &\\leq \\int_0^1 \\vert\\left(\\nabla f(w_2 + t(w_1-w_2))^T  -\\nabla f(w_2)^T \\right)(w_1-w_2)\\vert dt\\\\\n",
-        "                 \\color{#FE6F5E}{\\text{(II)}} &\\leq \\int_0^1 \\Vert\\nabla f(w_2 + t(w_1-w_2))^T  -\\nabla f(w_2)^T \\Vert\\cdot \\Vert w_1-w_2\\Vert dt\\\\\n",
-        "                \\color{#FE6F5E}{\\text{(III)}} &\\leq \\int_0^1 \\beta\\Vert w_2 + t(w_1-w_2)  -w_2 \\Vert\\cdot \\Vert w_1-w_2\\Vert dt\\\\\n",
-        "                                              &= \\int_0^1 \\beta\\Vert t(w_1-w_2) \\Vert dt\\cdot \\Vert w_1-w_2\\Vert\\\\\n",
-        "                                              &= \\beta\\int_0^1  t dt\\cdot \\Vert w_1-w_2\\Vert^2\\\\\n",
-        "                                              &= \\frac{\\beta}{2} t^2|_0^1  \\cdot \\Vert w_1-w_2\\Vert^2\\\\\n",
-        "                                              &= \\frac{\\beta}{2} \\Vert w_1-w_2 \\Vert^2\\\\\n",
+        "    \\mathcal{R}(w_{\\mu}) &= \\left(a + b\\right)\\left(a + b\\right)^T\\\\\n",
+        "                         &= aa^T + ab^T + ba^T + bb^T\\\\\n",
         "\\end{align}\n",
-        "$$\n",
-        "where in $\\color{#FE6F5E}{\\text{(I)}}$ we used a simple integral inequality \n",
-        "$$\n",
-        "\\vert \\int f(t)dt\\vert\\leq\\int\\vert f(t)\\vert dt\n",
-        "$$\n",
-        "in $\\color{#FE6F5E}{\\text{(II)}}$ we used the Cauchy–Schwarz inequality\n",
-        "$$\n",
-        "\\vert \\left\\langle v, u \\right\\rangle\\vert \\leq \\Vert v\\Vert \\Vert u\\Vert\n",
-        "$$\n",
-        "and in $\\color{#FE6F5E}{\\text{(III)}}$ we used the $\\beta$-smoothness (Lipschitz) property.               -->\n",
+        "\n",
+        "Then we can substitute this into the Bayes risk\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\mathcal{\\overline{R}}(w_{\\mu}) &\\triangleq \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) } \\left[\\mathcal{R}(w_\\mu)\\right]\\\\\n",
+        "  &= \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) } \\left[aa^T + ab^T + ba^T + bb^T\\right]\\\\\n",
+        "  &= \\mathbb{E}\\left[aa^T\\right] + \\mathbb{E}\\left[ab^T\\right] + \\mathbb{E}\\left[ba^T\\right] + \\mathbb{E}\\left[bb^T\\right]\\\\\n",
+        "\\end{align}\n",
+        "\n",
+        "Next, let us work them out one by one:\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[aa^T\\right] &= \\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[(H_{\\mu}^{-1}H-I)w_{true}w_{true}^T(H_{\\mu}^{-1}H-I)^T\\right]\\\\\n",
+        "  &= (H_{\\mu}^{-1}H-I)\\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\Vert w_{true}\\Vert^2\\right](H_{\\mu}^{-1}H-I)^T\\\\\n",
+        "\\end{align}\n",
+        "\n",
+        "recall that $$\\mathbb{E}[x^2]=\\text{Var}[x]-\\mathbb{E}[x]^2$$, so\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[aa^T\\right] &= (H_{\\mu}^{-1}H-I)\\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\Vert w_{true}\\Vert^2\\right](H_{\\mu}^{-1}H-I)^T\\\\\n",
+        "  &= (H_{\\mu}^{-1}H-I)\\left(\\frac{\\sigma_w^2}{d}I-0\\right)(H_{\\mu}^{-1}H-I)^T\\\\\n",
+        "  &= (H_{\\mu}^{-1}H-I)\\left(\\frac{\\sigma_w^2}{d}I\\right)(H_{\\mu}^{-1}H-I)^T\n",
+        "\\end{align}\n",
+        "\n",
+        "\n",
+        "Next,\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[ab^T\\right] &= \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\left(H_{\\mu}^{-1}H-I\\right)w_{true} \\left(H_{\\mu}^{-1}X^T\\epsilon\\right)^T\\right]\\\\\n",
+        "  &= \\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\left(H_{\\mu}^{-1}H-I\\right)w_{true}\\right] \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I)}\\left[\\left(H_{\\mu}^{-1}X^T\\epsilon\\right)^T\\right]\\\\\n",
+        "  &= 0\\cdot 0\n",
+        "  &= 0\n",
+        "\\end{align}\n",
+        "\n",
+        "and same goes for\n",
+        "$$\\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[ba^T\\right]=0$$\n",
+        "\n",
+        "Last\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[bb^T\\right] &=\n",
+        "\\end{align}\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "<div style=\"text-align: right\"> $\\color{#4CBB17}{\\rule{1.7ex}{1.7ex}}$ </div>"
       ]
