q1 in the process

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -214,16 +214,13 @@
         "\n",
         "\\begin{align}\n",
         "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[aa^T\\right] &= \\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[(H_{\\mu}^{-1}H-I)w_{true}w_{true}^T(H_{\\mu}^{-1}H-I)^T\\right]\\\\\n",
-        "  &= (H_{\\mu}^{-1}H-I)\\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\Vert w_{true}\\Vert^2\\right](H_{\\mu}^{-1}H-I)^T\\\\\n",
+        "  &= \\sum_{i, j}^{N}\\mathbb{E}\\left[(w_{true})_i(w_{true})_j\\right]\\left(H_{\\mu}^{-1}H-I\\right)_i\\left(HH_{\\mu}^{-1}-I\\right)_j\\\\\n",
+        "  &= \\sum_{i, j}^{N}\\frac{\\sigma_{w}^{2}}{d}\\delta_{ij}\\left(H_{\\mu}^{-1}H-I\\right)_i\\left(HH_{\\mu}^{-1}-I\\right)_j\\\\\n",
+        "  &= \\frac{\\sigma_{w}^{2}}{d}\\sum_{i}^{N}\\left(H_{\\mu}^{-1}H-I\\right)_i\\left(HH_{\\mu}^{-1}-I\\right)_j\\\\\n",
+        "  &= \\frac{\\sigma_{w}^{2}}{d}Tr\\left[\\left(H_{\\mu}^{-1}H-I\\right)\\left(HH_{\\mu}^{-1}-I\\right)\\right]\n",
         "\\end{align}\n",
         "\n",
-        "recall that $$\\mathbb{E}[x^2]=\\text{Var}[x]-\\mathbb{E}[x]^2$$, so\n",
         "\n",
-        "\\begin{align}\n",
-        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[aa^T\\right] &= (H_{\\mu}^{-1}H-I)\\mathbb{E}_{w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[\\Vert w_{true}\\Vert^2\\right](H_{\\mu}^{-1}H-I)^T\\\\\n",
-        "  &= (H_{\\mu}^{-1}H-I)\\left(\\frac{\\sigma_w^2}{d}I-0\\right)(H_{\\mu}^{-1}H-I)^T\\\\\n",
-        "  &= (H_{\\mu}^{-1}H-I)\\left(\\frac{\\sigma_w^2}{d}I\\right)(H_{\\mu}^{-1}H-I)^T\n",
-        "\\end{align}\n",
         "\n",
         "\n",
         "Next,\n",
@@ -241,9 +238,12 @@
         "Last\n",
         "\n",
         "\\begin{align}\n",
-        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[bb^T\\right] &=\n",
+        "  \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I), w_{true} \\sim \\mathcal{N}(0,\\frac{\\sigma_w^2}{d}I) }\\left[bb^T\\right] &= \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I)}\\left[\\left(H_{\\mu}^{-1}X^T\\epsilon\\right)\\left(H_{\\mu}^{-1}X^T\\epsilon\\right)^T\\right]\\\\\n",
+        "  &= \\mathbb{E}_{\\epsilon \\sim \\mathcal{N}(0, \\sigma_{\\epsilon}^2I)}\\left[H_{\\mu}^{-1}X^T\\epsilon\\epsilon^T X\\left(H_{\\mu}^{-1}\\right)^T\\right]\\\\\n",
+        "  &= \\sum_{i, j}^{N}\\mathbb{E}[\\epsilon_i \\epsilon_j] \\left(H_{\\mu}^{-1}X^T \\right)_i\\left(X H_{\\mu}^{-1} \\right)_j\\\\\n",
+        "  &=\\sum_{i, j}^{N}\\sigma_{\\epsilon}^2 \\delta_{ij} \\left(H_{\\mu}^{-1}X^T \\right)_i\\left(X H_{\\mu}^{-1}  \\right)_j\\\\\n",
+        "  &=\\sigma_{\\epsilon}^2 Tr\\left[XH_{\\mu}^{-2}X^T \\right]\n",
         "\\end{align}\n",
-        "\n",
         "\n",
         "\n",
         "\n",
