q1 in the process

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -245,6 +245,13 @@
         "  &=\\sigma_{\\epsilon}^2 Tr\\left[XH_{\\mu}^{-2}X^T \\right]\n",
         "\\end{align}\n",
         "\n",
+        "So, finally we end up with the next equality\n",
+        "\n",
+        "\\begin{align}\n",
+        "  \\overline{\\mathcal{R}}(w_\\mu) &= \\frac{\\sigma_{w}^{2}}{d}Tr\\left[\\left(H_{\\mu}^{-1}H-I\\right)\\left(HH_{\\mu}^{-1}-I\\right)\\right] + \\sigma_{\\epsilon}^2 Tr\\left[XH_{\\mu}^{-2}X^T \\right]\n",
+        "\\end{align}\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
