--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -251,6 +251,57 @@
         "  \\overline{\\mathcal{R}}(w_\\mu) &= \\frac{\\sigma_{w}^{2}}{d}Tr\\left[\\left(H_{\\mu}^{-1}H-I\\right)\\left(HH_{\\mu}^{-1}-I\\right)\\right] + \\sigma_{\\epsilon}^2 Tr\\left[XH_{\\mu}^{-2}X^T \\right]\n",
         "\\end{align}\n",
         "\n",
+        "Again, let us work out term by term, starting with the right most one\n",
+        "\n",
+        "\\begin{align}\n",
+        "  Tr\\left[XH_{\\mu}^{-2}X^T \\right] &= Tr\\left[X^TXH_{\\mu}^{-2} \\right]\\\\\n",
+        "    &= Tr\\left[X^TX \\left(\\mu I+X^TX\\right)^{-2} \\right]\n",
+        "\\end{align}\n",
+        "\n",
+        "recall that $X^T X$ is positive semi-definite matrix so it can be decomposed to $$X^T X = U \\lambda U^T$$ where $\\lambda$ is a diagonal matrix with non-negative eigenvalues and $U$ is a unitary matrix with eigenvectors on columns.  \n",
+        "\n",
+        "Then, \n",
+        "\n",
+        "\\begin{align}\n",
+        "  Tr\\left[XH_{\\mu}^{-2}X^T \\right] &= Tr\\left[X^TX \\left(\\mu I+X^TX\\right)^{-2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(\\mu I+U \\lambda U^T\\right)^{-2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(\\mu UIU^T+U \\lambda U^T\\right)^{-2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(U\\left(\\mu I+ \\lambda\\right) U^T\\right)^{-2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(\\left(U\\left(\\mu I+ \\lambda\\right) U^T\\right)^{-1}\\right)^{2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(\\left(U^T\\right)^{-1}\\left(\\mu I+ \\lambda\\right)^{-1} U^{-1}\\right)^{2} \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(\\left(U^T\\right)^{-1}\\left(\\mu I+ \\lambda\\right)^{-2} U^{-1}\\right) \\right]\\\\\n",
+        "  &= Tr\\left[U \\lambda U^T \\left(U\\left(\\mu I+ \\lambda\\right)^{-2} U^T\\right) \\right]\\\\\n",
+        "  &= Tr\\left[U^TU \\lambda U^T U\\left(\\mu I+ \\lambda\\right)^{-2}  \\right]\\\\\n",
+        "  &= Tr\\left[ \\lambda \\left(\\mu I+ \\lambda\\right)^{-2}  \\right]\\\\\n",
+        "  &= \\sum_{i=1}^{d} \\frac{\\lambda_i}{ \\left(\\mu +\\lambda_i\\right)^2}\n",
+        "\\end{align}\n",
+        "\n",
+        "Next let us workout the left term\n",
+        "\n",
+        "\\begin{align}\n",
+        "  Tr\\left[\\left(H_{\\mu}^{-1}H-I\\right)\\left(HH_{\\mu}^{-1}-I\\right)\\right] &= Tr\\left[H_{\\mu}^{-1}H HH_{\\mu}^{-1}\\right] - Tr\\left[H_{\\mu}^{-1}H\\right] - Tr\\left[ HH_{\\mu}^{-1}\\right] + Tr\\left[I^2\\right]\\\\\n",
+        "  &= Tr\\left[H_{\\mu}^{-2}H^2 \\right] - Tr\\left[H_{\\mu}^{-1}H\\right] - Tr\\left[ HH_{\\mu}^{-1}\\right] + Tr\\left[I^2\\right]\\\\\n",
+        "  &= Tr\\left[\\left(U\\lambda U^T + \\mu I\\right)^{-2}U\\lambda^2 U^T \\right] - 2Tr\\left[\\left(U\\lambda U^T + \\mu I\\right)^{-1}U\\lambda U^T\\right] + d\\\\\n",
+        "  &= Tr\\left[\\left(U^T\\right)^{-1}\\left(\\lambda + \\mu I\\right)^{-2}U^{-1}U\\lambda^2 U^T \\right] - 2Tr\\left[\\left(U^T\\right)^{-1}\\left(\\lambda + \\mu I\\right)^{-1}U^{-1}U\\lambda U^T\\right] + d\\\\\n",
+        "  &= Tr\\left[U\\left(\\lambda + \\mu I\\right)^{-2} \\lambda^2 U^T \\right] - 2Tr\\left[U\\left(\\lambda + \\mu I\\right)^{-1}\\lambda U^T\\right] + d\\\\\n",
+        "  &= Tr\\left[\\left(\\lambda + \\mu I\\right)^{-2} \\lambda^2 \\right] - 2Tr\\left[\\left(\\lambda + \\mu I\\right)^{-1}\\lambda \\right] + d\\\\\n",
+        "  &= \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}}   - 2\\sum_{i=1}^{d}\\frac{\\lambda_{i}}{\\left(\\lambda_i + \\mu \\right)} + d\\\\\n",
+        "  &= \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}}   - 2\\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}+\\lambda_{i}\\mu}{\\left(\\lambda_i + \\mu \\right)^{2}} + d\\\\\n",
+        "  &= - \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}+2\\lambda_{i}\\mu}{\\left(\\lambda_i + \\mu \\right)^{2}} + d\\\\\n",
+        "  &= - \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}+2\\lambda_{i}\\mu}{\\left(\\lambda_i + \\mu \\right)^{2}} + \\sum_{i=1}^{d}\\frac{\\left(\\lambda_i + \\mu \\right)^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}}\\\\\n",
+        "  &= - \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}+2\\lambda_{i}\\mu}{\\left(\\lambda_i + \\mu \\right)^{2}} + \\sum_{i=1}^{d}\\frac{\\lambda_{i}^{2}+2\\lambda_{i}\\mu + \\mu^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}}\\\\\n",
+        "  &= \\sum_{i=1}^{d}\\frac{\\mu^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}}\n",
+        "\\end{align}\n",
+        "\n",
+        "Finally we get\n",
+        "\n",
+        "\\begin{align}\n",
+        "   \\overline{\\mathcal{R}}(w_\\mu) &= \\frac{\\sigma_{w}^{2}}{d}\\sum_{i=1}^{d}\\frac{\\mu^{2}}{\\left(\\lambda_i + \\mu \\right)^{2}} + \\sigma_{\\epsilon}^2\\sum_{i=1}^{d} \\frac{\\lambda_i}{ \\left(\\mu +\\lambda_i\\right)^2}\\\\\n",
+        "  \\overline{\\mathcal{R}}(w_\\mu) &= \\boxed{\\sum_{i=1}^{d} \\frac{\\left(\\frac{\\sigma_{w}^{2}}{d}\\right)\\mu^{2}+\\sigma_{\\epsilon}^2\\lambda_i}{ \\left(\\mu +\\lambda_i\\right)^2}}\n",
+        "\\end{align}\n",
+        "\n",
+        "\n",
+        "and we are done.\n",
         "\n",
         "\n",
         "\n",
