--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1247,6 +1247,59 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "UaZMB1UMGmsc"
+      },
+      "source": [
+        "## <img src=\"https://img.icons8.com/clouds/100/26e07f/about.png\" style=\"height:50px;display:inline\">Question 5 - <span style=\"color: HotPink\">Solution</span>\n",
+        "---\n",
+        "\n",
+        "**First direction:**\n",
+        "\n",
+        "Say $$ \\forall \\tau \\in H, W[i, j] = W[\\tau(i), \\tau(j)] $$\n",
+        "So $\\tau$ is a transformation that satisfies the next relation $$\\tau^{-1} W \\tau=W$$\n",
+        "Then \n",
+        "\n",
+        "\\begin{align}\n",
+        "  f_w\\left(\\tau x\\right) &= \\phi\\left(W(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(IW(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(\\tau \\tau^{-1}W(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(\\tau \\left(\\tau^{-1}W\\tau\\right) x\\right)\\\\\n",
+        "   &= \\phi\\left(\\tau W x\\right)\\\\\n",
+        "   &= f_{\\tau w}\\left( x\\right)\n",
+        "\\end{align}\n",
+        "\n",
+        "**Second direction:**\n",
+        "Say $f_w=\\phi\\left(Wx\\right)$ is equivariante, so $\\forall \\tau$ $$f_w(\\tau x)=f_{\\tau w}( x)$$\n",
+        "\n",
+        "Notice that \n",
+        "\\begin{align}\n",
+        "  f_w\\left(\\tau x\\right) &= \\phi\\left(W(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(IW(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(\\tau \\tau^{-1}W(\\tau x)\\right)\\\\\n",
+        "   &= \\phi\\left(\\tau \\left(\\tau^{-1}W\\tau\\right) x\\right)\n",
+        "\\end{align}\n",
+        "\n",
+        "while also\n",
+        "\\begin{align}\n",
+        "  f_{\\tau w}\\left(x\\right) &= \\phi\\left(\\tau W x\\right)\\\\\n",
+        "\\end{align}\n",
+        "\n",
+        "so we get that\n",
+        "\\begin{align}\n",
+        "  \\phi\\left(\\tau \\left(\\tau^{-1}W\\tau\\right) x\\right) &= \\phi\\left(\\tau W x\\right)\\\\\n",
+        "\\end{align}\n",
+        "\n",
+        "which implies\n",
+        "$$\\tau^{-1}W\\tau =  W$$\n",
+        "\n",
+        "and we are done\n",
+        "\n",
+        "<div style=\"text-align: right\"> $\\color{#4CBB17}{\\rule{1.7ex}{1.7ex}}$ </div>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "hs2yLCpCJ4Pk"
       },
       "source": [
