--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -1265,11 +1265,13 @@
         "   &= \\phi\\left(\\tau \\tau^{-1}W(\\tau x)\\right)\\\\\n",
         "   &= \\phi\\left(\\tau \\left(\\tau^{-1}W\\tau\\right) x\\right)\\\\\n",
         "   &= \\phi\\left(\\tau W x\\right)\\\\\n",
-        "   &= f_{\\tau w}\\left( x\\right)\n",
+        "   &= \\tau f_{ w}\\left( x\\right)\n",
         "\\end{align}\n",
         "\n",
+        "where in the last line we used the fact that $\\phi$ is an entrywise operator.\n",
+        "\n",
         "**Second direction:**\n",
-        "Say $f_w=\\phi\\left(Wx\\right)$ is equivariante, so $\\forall \\tau$ $$f_w(\\tau x)=f_{\\tau w}( x)$$\n",
+        "Say $f_w=\\phi\\left(Wx\\right)$ is equivariante, so $\\forall \\tau$ $$f_w(\\tau x)=\\tau f_{ w}( x)$$\n",
         "\n",
         "Notice that \n",
         "\\begin{align}\n",
@@ -1281,7 +1283,8 @@
         "\n",
         "while also\n",
         "\\begin{align}\n",
-        "  f_{\\tau w}\\left(x\\right) &= \\phi\\left(\\tau W x\\right)\\\\\n",
+        " \\tau f_{ w}\\left(x\\right) &= \\tau\\phi\\left( W x\\right)\\\\\n",
+        " &= \\phi\\left(\\tau W x\\right)\n",
         "\\end{align}\n",
         "\n",
         "so we get that\n",
