--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -472,7 +472,7 @@
         "    data = data.view(bsz, -1).t().contiguous()\n",
         "    return data.to(device)"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -482,26 +482,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ymduOIU6ozgj",
-        "outputId": "5c4d2388-ffd5-4bf1-e7b9-be3c315bbd23"
+        "outputId": "5c112928-4453-4426-d095-872274509657"
       },
       "source": [
+        "datasets.WikiText2.download('./datasets')\n",
         "tokenizer = data.utils.get_tokenizer(\"basic_english\")\n",
-        "tokens = tokenizer(\"Let us go surfing !\")\n",
-        "tokens"
+        "ds_train = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train'))\n",
+        "print('train : ', len(ds_train))\n",
+        "\n",
+        "counter = Counter()\n",
+        "for line in ds_train:\n",
+        "    counter.update(tokenizer(line))\n",
+        "vocab = Vocab(counter)\n",
+        "\n",
+        "def data_process(raw_text_iter):\n",
+        "    data = [torch.tensor([vocab[token] for token in tokenizer(item)],\n",
+        "                        dtype=torch.long) for item in raw_text_iter]\n",
+        "    return torch.cat(tuple(filter(lambda t: t.numel() > 0, data)))\n",
+        "\n",
+        "ds_train, ds_valid, ds_test = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train', 'valid', 'test'))\n",
+        "train_data = data_process(ds_train)\n",
+        "val_data = data_process(ds_valid)\n",
+        "test_data = data_process(ds_test)\n",
+        "\n",
+        "batch_size = 20\n",
+        "eval_batch_size = 10\n",
+        "train_data = batchify(train_data, batch_size)\n",
+        "val_data = batchify(val_data, eval_batch_size)\n",
+        "test_data = batchify(test_data, eval_batch_size)\n",
+        "\n",
+        "print('\\n')\n",
+        "print(f'Train shape: {train_data.shape}')\n",
+        "print(f'Validation shape: {val_data.shape}')\n",
+        "print(f'Test shape: {test_data.shape}')\n",
+        "print('\\n')\n",
+        "\n",
+        "\n",
+        "def get_words(i_vector):\n",
+        "  words = ''\n",
+        "  for i in i_vector:\n",
+        "    words += vocab.itos[i]\n",
+        "    words += ' '\n",
+        "  print(words)\n",
+        "\n",
+        "get_words(train_data[1])"
       ],
       "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['let', 'us', 'go', 'surfing', '!']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
+          "output_type": "stream",
+          "text": [
+            "train :  36718\n",
+            "\n",
+            "\n",
+            "Train shape: torch.Size([102499, 20])\n",
+            "Validation shape: torch.Size([21441, 10])\n",
+            "Test shape: torch.Size([24185, 10])\n",
+            "\n",
+            "\n",
+            "valkyria @-@ led intersections celtic families kramer building of to , authorities odds score viewed killed the or an truth \n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -516,7 +557,7 @@
         "outputId": "64361d86-8b4c-46d7-f0dc-582bbaf9e90f"
       },
       "source": [
-        "TEXT = data.Field(batch_first=True, \n",
+        "text = data.Field(batch_first=True, \n",
         "                  lower=True, \n",
         "                  tokenizer_language=tokenizer, \n",
         "                  eos_token='<eos>', \n",
@@ -565,120 +606,6 @@
           "output_type": "stream",
           "text": [
             "train :  36718\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uGkbyp0IqV5u"
-      },
-      "source": [
-        "counter = Counter()\n",
-        "for line in ds_train:\n",
-        "    counter.update(tokenizer(line))\n",
-        "vocab = Vocab(counter)"
-      ],
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3c3ZD9wYt9oq"
-      },
-      "source": [
-        "def data_process(raw_text_iter):\n",
-        "    data = [torch.tensor([vocab[token] for token in tokenizer(item)],\n",
-        "                        dtype=torch.long) for item in raw_text_iter]\n",
-        "    return torch.cat(tuple(filter(lambda t: t.numel() > 0, data)))\n",
-        "\n",
-        "ds_train, ds_valid, ds_test = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train', 'valid', 'test'))\n",
-        "train_data = data_process(ds_train)\n",
-        "val_data = data_process(ds_valid)\n",
-        "test_data = data_process(ds_test)"
-      ],
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LMZVnwB52nDx"
-      },
-      "source": [
-        "batch_size = 20\n",
-        "eval_batch_size = 10\n",
-        "train_data = batchify(train_data, batch_size)\n",
-        "val_data = batchify(val_data, eval_batch_size)\n",
-        "test_data = batchify(test_data, eval_batch_size)"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mKkxJnkS2VmQ",
-        "outputId": "c6ca04b6-18e8-4b05-8333-980124bfb0df",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "print(f'Train shape: {train_data.shape}')\n",
-        "print(f'Validation shape: {val_data.shape}')\n",
-        "print(f'Test shape: {test_data.shape}')"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Train shape: torch.Size([102499, 20])\n",
-            "Validation shape: torch.Size([21441, 10])\n",
-            "Test shape: torch.Size([24185, 10])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NdLyrd215cTx"
-      },
-      "source": [
-        "def get_words(i_vector):\n",
-        "  words = ''\n",
-        "  for i in i_vector:\n",
-        "    words += vocab.itos[i]\n",
-        "    words += ' '\n",
-        "  print(words)"
-      ],
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7qRrd7U15cWF",
-        "outputId": "8c365921-447a-4e59-e0cf-bd08f29e84bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "get_words(train_data[1])"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "valkyria @-@ led intersections celtic families kramer building of to , authorities odds score viewed killed the or an truth \n"
           ],
           "name": "stdout"
         }
