--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -559,7 +559,8 @@
       "source": [
         "text = data.Field(batch_first=True, \n",
         "                  lower=True, \n",
-        "                  tokenizer_language=tokenizer, \n",
+        "                  tokenizer_language=tokenizer,\n",
+        "                  init_token'<sos>', \n",
         "                  eos_token='<eos>', \n",
         "                  )\n",
         "datasets.WikiText2.download('./datasets')"
